# fivetran_connector_sdk

./: .flake8  .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  FIVETRAN_CODING_PRINCIPLES.md  LICENSE  PYTHON_CODING_STANDARDS.md  README.md  README_template.md  connector_registry.json  dot.txt  requirements.txt  rillet-openapi.json
.claude/skills/: fivetran-connector.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  request.md  request.yml
.github/git_hooks/: pre-commit
.github/instructions/: configuration-review.instructions.md  python-review.instructions.md  readme-markdown.instructions.md
.github/scripts/: check-codeowner-approval.js  setup-hooks.sh
.github/workflows/: add-label.yml  (+9 more)
AI_agents/: README.md
ai_and_connector_sdk/: AI_README.md  CLAUDE.md  README.md  agents.md  agents_v2.md  examples
buildkite_connector/: README.md  configuration.json  connector.py  requirements.txt
examples/: README.md  index.md
examples/quickstart_examples/pyproject_toml/: README.md  configuration.json  connector.py  pyproject.toml
git_hooks/: pre-commit
mcp_server/: flask_server.py  hosted_mcp_server.py  mcp_flask_bridge.py  mcp_http_client.py  mcp_server.py
myenv/: pyvenv.cfg
scripts/: fix-python-formatting.sh
template_connector/: README_template.md  configuration.json  connector.py  requirements.txt
template_example_connector/: README_template.md  configuration_form.json  connector.py  requirements.txt
tools/: generate_form.py
tutorials/: README.md
(+1620 files in other folders)
